# whatsapp-api-client-python

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_SHORT.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-cd.yml
examples/: __init__.py  comprehensive_example.py  create_group_and_send_message.py  multi_messenger_example.py  receive_notifications.py  send_file_by_upload.py  send_file_by_url.py  send_text_message.py  telegram_example.py  webhook_server.py
scripts/: dev.py
sdkwa/: __init__.py  client.py  exceptions.py  types.py  webhook.py
